--- a/Weather/www/index.html
+++ b/Weather/www/index.html
@@ -31,15 +31,11 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-  </head>
-  <body ng-app="starter">
+    <script src="js/constants.js"></script>
+    <script src="js/controllers.js"></script>
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
+  </head>
+<body ng-app="weather">
+    <ion-nav-view></ion-nav-view>
   </body>
 </html>
